chore: remove some deps, fix some docs