@@ -14,7 +14,7 @@ Add the plugin to your build:
 ```kotlin
 // build.gradle.kts
 plugins {
-    id("dev.javafmt.gradle") version "0.1.0"
+    id("dev.javafmt.gradle") version "<latest>"
 }
 ```
 
@@ -37,20 +37,53 @@ This registers two tasks:
 
 The IntelliJ plugin detects when the Gradle plugin is active in a project and automatically replaces the
 built-in Java formatter. There is nothing new to invoke, **Reformat Code** and format-on-save both route
-through black instead of IntelliJ's built-in formatter.
+through javafmt instead of IntelliJ's built-in formatter.
 
 ### CLI
-TODO
+
+Download `javafmt-<version>.jar` from the [latest release](https://github.com/mworzala/javafmt/releases/latest)
+and run it with any JDK 25+:
+
+```bash
+# Format files in place
+java -jar javafmt.jar format src/main/java
+
+# Check formatting (exits non-zero if any file would change)
+java -jar javafmt.jar check src/main/java
+
+# Format from stdin
+cat Foo.java | java -jar javafmt.jar format -
+```
+
+Run `java -jar javafmt.jar --help` for the full list of options (`--threads`, `--release`,
+`--enable-preview`, `--line-length`, `--verbose`).
 
 ### As a library
-The formatter is available as a library for standalone use, published to Maven Central.
 
-TODO
+The formatter is published to Maven Central as `dev.javafmt:core`:
+
+```kotlin
+// build.gradle.kts
+dependencies {
+    implementation("dev.javafmt:core:<latest>")
+}
+```
+
+```java
+import dev.javafmt.Formatter;
+
+var result = new Formatter().format(source);
+switch (result) {
+    case Formatter.Success(var formatted)   -> System.out.println(formatted);
+    case Formatter.SyntaxError(var problems) -> problems.forEach(System.err::println);
+    case Formatter.Failure(var error)        -> error.printStackTrace();
+}
+```
 
 ## Style
 
-black.java makes all formatting decisions for you. See [STYLE.md](STYLE.md) for a full account of the choices it makes
-and the reasoning behind them.
+javafmt makes all formatting decisions for you. See [STYLE.md](STYLE.md) for a full account of the choices
+it makes and the reasoning behind them.
 
 ## Contributing
 
